<resources>

    <string name="app_name">AugmentMobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tv_heading">GRAYMATICS</string>
    <string name="tv_analyzed">Analyzed</string>
    <string name="tv_touch_here_to_take_photo">Touch here to take photo</string>
    <string name="tv_drag_photo_from_gallery">Drag photo from gallery</string>
    <string name="picture">Picture</string>

</resources>